--- a/public/sass/utils/_hacks.scss
+++ b/public/sass/utils/_hacks.scss
@@ -23,3 +23,7 @@ input:-webkit-autofill {
 input:not(:-webkit-autofill) {
   animation-name: onAutoFillCancel;
 }
+
+div[data-slate-editor] {
+  -webkit-user-modify: read-write !important;
+}
